chore: updated swagger, readme and fixed rocketsController so that it now takes a query param. all tests written are passing :)
